examples/test/testpolicy3949.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3949
  namespace: namespace72
spec:
  podSelector:
    matchLabels:
      key21: value23
      key17: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value11
          key48: value38
          key15: value33
      podSelector:
        matchLabels:
          key26: value47
